--- a/.gitignore
+++ b/.gitignore
@@ -241,4 +241,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,intellij+all,maven,git,patch,vim,notepadpp,java
