Added String templating/TimeWarningMapper

--- a/src/main/resources/warning-templates.properties
+++ b/src/main/resources/warning-templates.properties
@@ -1,8 +1,6 @@
-warning.time.missingrest.missingbreak.excesswork= Du hattest %s Stunden zu wenig Ruhezeit, %s Stunden zu viel Arbeitszeit und %s Stunden zu wenig Pausenzeit!
-warning.time.missingrest.missingbreak= Du hattest %s Stunden zu wenig Ruhezeit und %s Stunden zu wenig Pausenzeit!
-warning.time.missingrest.excesswork= Du hattest %s Stunden zu wenig Ruhezeit und %s Stunden zu viel Arbeitszeit!
-warning.time.excesswork.missingbreak= Du hattest %s Stunden zu viel Arbeitszeit und %s Stunden zu wenig Pausenzeit
-warning.time.missingrest= Du hattest %s Stunden zu wenig Ruhezeit!
-warning.time.missingbreak= Du hattest %s Stunden zu wenig Pausenzeit!
-warning.time.excesswork= Du hattest %s Stunden zu viel Arbeitszeit!
-warning.time = Not implemented yet.
+
+WARNING.TIME.MISSINGREST= Du hattest %s Stunden zu wenig Ruhezeit!
+WARNING.TIME.MISSINGBREAK= Du hattest %s Stunden zu wenig Pausenzeit!
+WARNING.TIME.EXCESSWORK= Du hattest %s Stunden zu viel Arbeitszeit!
+
+WARNING.TIME. = Not implemented yet.
