--- a/src/main/resources/warning-templates.properties
+++ b/src/main/resources/warning-templates.properties
@@ -4,9 +4,9 @@ WARNING.TIME.MISSINGBREAK = Du hattest %s Stunden zu wenig Pausenzeit!
 WARNING.TIME.EXCESSWORK = Du hattest %s Stunden zu viel Arbeitszeit!
 WARNING.TIME.DOCTOR = Du hast eine Arztbuchung auﬂerhalb deiner Sollarbeitszeit gebucht!
 WARNING.TIME.NO_TIME_ENTRY = Du hast keine Zeit-Buchung vorgenommen!
-WARNING.TIME.TIME_OVERLAP = Doppelbuchung \u00FCber denselben Zeitraum gefunden!
-WARNING.TIME.OUTSIDE_CORE_WORKING_TIME = Kontrolle des Gleitzeitrahmens (06:00 bis 22:00 Uhr), bei Buchungen au\u00DFerhalb des Gleitzeitrahmens bitte um R\u00FCcksprache mit HR!
-WARNING.TIME.EMPTY_ENTRY_LIST = Keine Buchung oder Abwesenheit f√ºr dieses Monat vorhanden!
-WARNING.TIME.HOLIDAY = Buchung au√üerhalb eines Arbeitstages!
-WARNING.TIME.WEEKEND = Buchung au√üerhalb eines Arbeitstages!
+WARNING.TIME.TIME_OVERLAP = Doppelbuchung ¸ber denselben Zeitraum gefunden!
+WARNING.TIME.OUTSIDE_CORE_WORKING_TIME = Kontrolle des Gleitzeitrahmens (06:00 bis 22:00 Uhr), bei Buchungen auﬂerhalb des Gleitzeitrahmens bitte um R¸cksprache mit HR!
+WARNING.TIME.EMPTY_ENTRY_LIST = Keine Buchung oder Abwesenheit f¸r dieses Monat vorhanden!
+WARNING.TIME.HOLIDAY = Buchung auﬂerhalb eines Arbeitstages!
+WARNING.TIME.WEEKEND = Buchung auﬂerhalb eines Arbeitstages!
 
