--- a/src/main/resources/warning-templates.properties
+++ b/src/main/resources/warning-templates.properties
@@ -1,6 +1,6 @@
 WARNING.TIME.MISSINGREST = Du hast %s Stunden zu wenig Ruhezeit!
 WARNING.TIME.MISSINGBREAK = Du hast %s Stunden zu wenig Pausenzeit!
-WARNING.TIME.EXCESSWORK = Du hsat %s Stunden zu viel Arbeitszeit!
+WARNING.TIME.EXCESSWORK = Du hast %s Stunden zu viel Arbeitszeit!
 WARNING.TIME.DOCTOR = Du hast eine Arztbuchung au\u00DFerhalb deiner Sollarbeitszeit gebucht!
 WARNING.TIME.NO_TIME_ENTRY = Du hast keine Zeit-Buchung vorgenommen!
 WARNING.TIME.TIME_OVERLAP = Doppelbuchung \u00FCber denselben Zeitraum gefunden!
