#20 fix scope of quarkus-test-security-jwt dependency

--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,7 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-test-security-jwt</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
