--- a/pom.xml
+++ b/pom.xml
@@ -333,7 +333,7 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>${liquibase-maven-plugin.version}</version>
+                <version>4.17.0</version>
                 <configuration>
                     <propertyFile>liquibase.properties</propertyFile>
                     <!--
@@ -351,10 +351,11 @@
                         <artifactId>validation-api</artifactId>
                         <version>2.0.1.Final</version>
                     </dependency>
+                    <!--Make sure that liquibase version delivered with quarkus is the same as this dependency-->
                     <dependency>
                         <groupId>org.liquibase.ext</groupId>
                         <artifactId>liquibase-hibernate5</artifactId>
-                        <version>4.0.0</version>
+                        <version>4.6.2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.springframework</groupId>
