[Gepardec/mega#640] - States (OPEN / DONE) von der Office und Projekt View sollen auch von DONE wieder zurück auf OPEN gesetzt werden können.
Bisher gab es nur Methoden, die fix den Status auf Close gesetzt haben. Diese wurden größenteils (in den Endpunkten aufjedenfall) aufgeräumt und "sprechender" benannt. Sie benötigen jetzt einen newState.
Eine Close Methode bleibt vorerst noch in StepEntryResourceImpl vorhanden, weil MonthlyReport (GUI) + ein paar Unit Tests im Backend sie benötigt.
Der Issue 640 betrifft erstmal nur Office und Projekt View.

Grund für UpdateEmployeeStepDto.java Klasse:
Weil die originale "EmployeeStateDto" Klasse noch verwendet wird (für /close bei monthlyReport). Um diese nicht zu verändern, wurde eine neue Klasse mit Prefix "Update" erstellt, die sie um eine Prop "newState" erweitert.

Die ProjectStepDto Klasse wird nicht mehr im kontext "nur closen" verwendet, sondern nur noch mehr bei state update methoden. Daher wurde diese DIREKT erweitert, im Gegensatz zu EmployeeStateDto. (Wenn Umbau bei Monthyly Report auch erfolgen soll, dann sollte die UpdateEmployeeStepDto auch gelöscht werden und stattdessen EmployeeStateDto um newState erweitern und verwenden)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -135,6 +135,7 @@ mp:
           - "daniel.rasztovich@gepardec.com"
           - "theresa.mueller@gepardec.com"
           - "michael.leitner@gepardec.com"
+          - "simon.bauer@gepardec.com"
 
 ## TEST Properties
 "%test":
