--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,8 @@ jobs:
 
   docker-build-and-push:
     runs-on: ubuntu-latest
+    needs:
+      - build-and-test
     steps:
       - uses: actions/checkout@v3
         name: checkout
