--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
+  build-test-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,12 +19,6 @@ jobs:
 
       - name: Build and test project with Maven
         run: mvn -B package -D skipTests --file pom.xml
-
-  docker-build-and-push:
-    runs-on: ubuntu-latest
-    needs:
-      - build-and-test
-    steps:
 
       - name: Set outputs
         id: vars
