--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,9 +26,9 @@ jobs:
         id: vars
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
+#      - name: Get current date
+#        id: date
+#        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
 
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: push-container-image
@@ -41,7 +41,7 @@ jobs:
           # directory:  git-workflows
           addLatest: true
           tags: ${{ steps.vars.outputs.sha_short }},latest
-          buildArgs: BRANCH=${BRANCH_NAME},COMMIT=${{ steps.vars.outputs.sha_short }},VERSION=${{ steps.vars.outputs.sha_short }},TIMESTAMP=${{ steps.date.outputs.date }}
+          buildArgs: BRANCH=${BRANCH_NAME},COMMIT=${{ steps.vars.outputs.sha_short }},VERSION=${{ steps.vars.outputs.sha_short }} #,TIMESTAMP=${{ steps.date.outputs.date }}
 
 #  notify:
 #    name: Slack Notifications
