updated datasource env var

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,7 +57,7 @@ quarkus:
     username: "${DB_USER}"
     password: "${DB_PASSWORD}"
     jdbc:
-      url: "jdbc:postgresql://${DB_HOST}/mega"
+      url: "${DB_JDBC_URL}"
 
 mega:
   info:
