--- a/pom.xml
+++ b/pom.xml
@@ -60,21 +60,21 @@
             <!-- OVERWRITE DEPENDENCIES FOR FIXING CRITICAL SECURITY VULNERABILITIES.
                 TODO: Remove after quarkus upgrades and check whether vulnerabilities are fixed.
             -->
-            <dependency>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-core</artifactId>
-                <version>4.8.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <version>42.3.3</version>
-            </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.yaml</groupId>-->
-<!--                <artifactId>snakeyaml</artifactId>-->
-<!--                <version>2.0</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.liquibase</groupId>-->
+            <!--                <artifactId>liquibase-core</artifactId>-->
+            <!--                <version>4.8.0</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.postgresql</groupId>-->
+            <!--                <artifactId>postgresql</artifactId>-->
+            <!--                <version>42.3.3</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.yaml</groupId>-->
+            <!--                <artifactId>snakeyaml</artifactId>-->
+            <!--                <version>2.0</version>-->
+            <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -205,6 +205,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
