--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
         <!-- Additional Dependencies -->
         <dependency>
             <groupId>org.apache.commons</groupId>
