--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <quarkus-plugin.version>3.2.0.Final</quarkus-plugin.version>
         <quarkus.platform.version>3.2.0.Final</quarkus.platform.version>
 
-        <ws.rt.version>2.3.5</ws.rt.version>
+        <ws.rt.version>4.0.0</ws.rt.version>
         <xml.resolver.version>20050927</xml.resolver.version>
         <lombok.version>1.18.22</lombok.version>
         <jollyday.version>0.5.10</jollyday.version>
@@ -154,11 +154,11 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-cache</artifactId>
         </dependency>
-        <dependency>
-            <groupId>jakarta.xml.ws</groupId>
-            <artifactId>jakarta.xml.ws-api</artifactId>
-            <version>4.0.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>jakarta.xml.ws</groupId>-->
+<!--            <artifactId>jakarta.xml.ws-api</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
         <!-- Additional Dependencies -->
         <dependency>
             <groupId>org.apache.commons</groupId>
