[Gepardec/mega#655] add paul.waldecker to om array

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -97,6 +97,7 @@ mega:
         - "robin.fischer@gepardec.com"
         - "alexandra.stummer@gepardec.com"
         - "simon.bauer@gepardec.com"
+        - "paul.waldecker@gepardec.com"
 
 mp:
   jwt:
