--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,11 @@ quarkus:
   http:
     cors:
       ~: true
-      access-control-allow-credentials: true
       origins: "https://mega-frontend([a-z0-9\\-_]+)\\.play\\.run\\.gepardec\\.com/"
+      access-control-allow-credentials: true
+      access-control-max-age: 24H
+      headers: "Access-Control-Allow-Origin"
+      methods: "GET,POST,PUT,DELETE"
     root-path: "/"
     non-application-root-path: "/"
     port: 8080
