--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ quarkus:
   http:
     cors:
       ~: true
-      origins: "/https://mega-frontend([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/,/https://gepardec-sso([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/"  #,/https://([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/
+      origins: "/https://mega-frontend([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/.*,/https://gepardec-sso([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/.*"  #,/https://([a-z0-9-]*)\\.play\\.run\\.gepardec\\.com/
       access-control-allow-credentials: true
       access-control-max-age: 24H
       headers: "Access-Control-Allow-Origin"
