--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ quarkus:
   http:
     cors:
       ~: true
-      origins: "/https://(.*)\\.play\\.run\\.gepardec\\.com/"
+      origins: "/https:\\/\\/(.*)\\.play\\.run\\.gepardec\\.com/"
       access-control-allow-credentials: true
     root-path: "/"
     non-application-root-path: "/"
