--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,9 @@ quarkus:
   http:
     cors:
       ~: true
-      origins: "/https:\\/\\/(.*)\\.play\\.run\\.gepardec\\.com/"
+      origins:
+        - https://mega-frontend-hotfix-cors.play.run.gepardec.com
+        - https://gepardec-sso-dev.play.run.gepardec.com
       access-control-allow-credentials: true
     root-path: "/"
     non-application-root-path: "/"
