--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <focus-shift.version>0.16.0</focus-shift.version>
         <assertj.version>3.21.0</assertj.version>
         <orika-core.version>1.5.4</orika-core.version>
+        <basicjaxb-plugins.version>2.1.0</basicjaxb-plugins.version>
         <!-- application info -->
         <!-- !!! IMPORTANT !!!! -->
         <!-- remove -SNAPSHOT in release-branch but keep it in develop branch -->
@@ -241,6 +242,10 @@
                             <wsdlOptions>
                                 <wsdlOption>
                                     <wsdl>${project.basedir}/src/main/resources/wsdl/zep_v7.wsdl</wsdl>
+                                    <extraargs>
+                                        <extraarg>-xjc-Xsetters</extraarg>
+                                        <extraarg>-xjc-Xsetters-mode=direct</extraarg>
+                                    </extraargs>
                                     <bindingFiles>
                                         <bindingFile>${project.basedir}/src/main/resources/wsdl/zep-bindings.xml
                                         </bindingFile>
@@ -250,6 +255,24 @@
                         </configuration>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.cxf.xjc-utils</groupId>
+                        <artifactId>cxf-xjc-runtime</artifactId>
+                        <version>${cxf-codegen-plugin.version}</version>
+                    </dependency>
+                    <!--FIXME: Keep track of https://github.com/highsource/jaxb2-basics/issues/162, since it is the original package-->
+                    <dependency>
+                        <groupId>org.patrodyne.jvnet</groupId>
+                        <artifactId>hisrc-basicjaxb-plugins</artifactId>
+                        <version>${basicjaxb-plugins.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.patrodyne.jvnet</groupId>
+                        <artifactId>hisrc-basicjaxb-runtime</artifactId>
+                        <version>${basicjaxb-plugins.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
