--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <lombok.version>1.18.22</lombok.version>
         <focus-shift.version>0.16.0</focus-shift.version>
         <assertj.version>3.21.0</assertj.version>
-        <orika-core.version>1.5.4</orika-core.version>
         <basicjaxb-plugins.version>2.1.0</basicjaxb-plugins.version>
+        <modelmapper.version>3.1.1</modelmapper.version>
         <!-- application info -->
         <!-- !!! IMPORTANT !!!! -->
         <!-- remove -SNAPSHOT in release-branch but keep it in develop branch -->
@@ -213,9 +213,9 @@
             <version>${lombok.version}</version>
         </dependency>
         <dependency>
-            <groupId>ma.glasnost.orika</groupId>
-            <artifactId>orika-core</artifactId>
-            <version>${orika-core.version}</version>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
         </dependency>
     </dependencies>
     <build>
