[Gepardec/mega#675] send initial load to client

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -99,6 +99,7 @@ mega:
         - "alexandra.stummer@gepardec.com"
         - "simon.bauer@gepardec.com"
         - "paul.waldecker@gepardec.com"
+        - "paul.proemer@gepardec.com"
 
 mp:
   jwt:
