[Gepardec/mega#664] Introduce BaseResponse for Personio-API
Since all responses from the Personio API contain a payload even when they have an error status code, the blueprint of a Personio response is described by the generic class BaseResponse.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -64,6 +64,14 @@ quarkus:
     personio-api-v1:
       url: "https://api.personio.de/v1"
 
+# disables the DefaultResponseExceptionMapper of the microprofile resteasy client
+microprofile:
+  rest:
+    client:
+      disable:
+        default:
+          mapper: true
+
 mega:
   info:
     build:
