--- a/src/main/resources/warning-templates.properties
+++ b/src/main/resources/warning-templates.properties
@@ -1,11 +1,11 @@
-WARNING.TIME.MISSINGREST = Du hast %s Stunden zu wenig Ruhezeit!
-WARNING.TIME.MISSINGBREAK = Du hast %s Stunden zu wenig Pausenzeit!
-WARNING.TIME.EXCESSWORK = Du hast %s Stunden zu viel Arbeitszeit!
-WARNING.TIME.DOCTOR = Du hast eine Arztbuchung au\u00DFerhalb deiner Sollarbeitszeit gebucht!
-WARNING.TIME.NO_TIME_ENTRY = Du hast keine Zeit-Buchung vorgenommen!
-WARNING.TIME.TIME_OVERLAP = Doppelbuchung \u00FCber denselben Zeitraum gefunden!
-WARNING.TIME.OUTSIDE_CORE_WORKING_TIME = Kontrolle des Gleitzeitrahmens (06:00 bis 22:00 Uhr), bei Buchungen au\u00DFerhalb des Gleitzeitrahmens bitte um R\u00FCcksprache mit HR!
-WARNING.TIME.EMPTY_ENTRY_LIST = Keine Buchung oder Abwesenheit f\u00FCr dieses Monat vorhanden!
-WARNING.TIME.HOLIDAY = Buchung au\u00DFerhalb eines Arbeitstages!
-WARNING.TIME.WEEKEND = Buchung au\u00DFerhalb eines Arbeitstages!
+WARNING.TIME.MISSINGREST=Du hast %s Stunden zu wenig Ruhezeit!
+WARNING.TIME.MISSINGBREAK=Du hast %s Stunden zu wenig Pausenzeit!
+WARNING.TIME.EXCESSWORK=Du hast %s Stunden zu viel Arbeitszeit!
+WARNING.TIME.DOCTOR=Du hast eine Arztbuchung au\u00DFerhalb deiner Sollarbeitszeit gebucht!
+WARNING.TIME.NO_TIME_ENTRY=Du hast keine Zeit-Buchung vorgenommen!
+WARNING.TIME.TIME_OVERLAP=Doppelbuchung \u00FCber denselben Zeitraum gefunden!
+WARNING.TIME.OUTSIDE_CORE_WORKING_TIME=Kontrolle des Gleitzeitrahmens (06:00 bis 22:00 Uhr), bei Buchungen au\u00DFerhalb des Gleitzeitrahmens bitte um R\u00FCcksprache mit HR!
+WARNING.TIME.EMPTY_ENTRY_LIST=Keine Buchung oder Abwesenheit f\u00FCr dieses Monat vorhanden!
+WARNING.TIME.HOLIDAY=Buchung au\u00DFerhalb eines Arbeitstages!
+WARNING.TIME.WEEKEND=Buchung au\u00DFerhalb eines Arbeitstages!
 
