[Gepardec/mega#702] disable EmailReceiver per default

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -116,6 +116,7 @@ mega:
         - "paul.proemer@gepardec.com"
 
     receiver:
+      enabled: false
       protocol: "imaps"
       host: "imap.gmail.com"
       port: 993
