--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -116,13 +116,13 @@ mega:
         - "paul.proemer@gepardec.com"
 
     receiver:
-      enabled: false
       protocol: "imaps"
       host: "imap.gmail.com"
       port: 993
       username: "service@gepardec.com"
       password: "${MAILER_PASSWORD:default}"
       sender: "nobody@provantis.de"
+      cron-expr: "disabled"
 
   personio:
     api:
