[Gepardec/mega#722] add prematureemployeecheck-sequence to liquibase changelog

--- a/src/main/resources/db/changelog-premature.yaml
+++ b/src/main/resources/db/changelog-premature.yaml
@@ -1,5 +1,13 @@
 databaseChangeLog:
   - changeSet:
+      id: create-sequence-for-premature-employee-check
+      author: MEGA-722
+      changes:
+        - createSequence:
+            incrementBy: 1
+            sequenceName: prematureemployeecheck_seq
+            startValue: 1
+  - changeSet:
       id: create-premature-employee-check-table
       author: MEGA-684
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
