[Gepardec/mega#722] added state to pec

--- a/src/main/resources/db/changelog-premature.yaml
+++ b/src/main/resources/db/changelog-premature.yaml
@@ -46,6 +46,11 @@ databaseChangeLog:
                     nullable: true
                   name: reason
                   type: varchar(500)
+              - column:
+                  constraints:
+                    nullable: false
+                  name: state
+                  type: varchar(15)
             tableName: premature_employee_check
   - changeSet:
       id: unique-constraint_premature-1
