--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -121,7 +121,7 @@ mega:
       port: 993
       username: "service@gepardec.com"
       password: "${MAILER_PASSWORD:default}"
-      sender: "nobody@provantis.de"
+      sender: "nobody@zep.de"
       cron-expr: "disabled"
 
   personio:
