--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -68,6 +68,8 @@ quarkus:
   rest-client:
     personio-api-v1:
       url: "https://api.personio.de/v1"
+    zep:
+      url: https://www.zep-online.de/zepgepardecservices_test/next/api/v1/
 
 # disables the DefaultResponseExceptionMapper of the microprofile resteasy client
 microprofile:
@@ -154,7 +156,6 @@ mp:
       jdbc:
         url: "jdbc:postgresql://localhost:5432/mega"
     rest-client:
-      "com.gepardec.mega.zep.rest.client.ZepEmployeeRestClient":
         url: https://www.zep-online.de/zepgepardecservices_test/next/api/v1/
 
     http:
@@ -183,8 +184,8 @@ mp:
 "%test":
   quarkus:
     rest-client:
-      "com.gepardec.mega.zep.rest.client.ZepEmployeeRestClient":
-        url: "https://www.zep-online.de/zepgepardecservices_test/next/api/v1/"
+        zep:
+          url: "https://www.zep-online.de/zepgepardecservices_test/next/api/v1/"
     log:
       console:
         format: "%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n"
