--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -156,6 +156,9 @@ mp:
       jdbc:
         url: "jdbc:postgresql://localhost:5432/mega"
     rest-client:
+      "com.gepardec.mega.zep.rest.client.ZepEmployeeRestClient":
+        url: https://www.zep-online.de/zepgepardecservices_test/next/api/v1/
+      "com.gepardec.mega.zep.rest.client.ZepAttendanceRestClient":
         url: https://www.zep-online.de/zepgepardecservices_test/next/api/v1/
 
     http:
