[Gepardec/mega#718] Change default receiver email address

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -121,7 +121,7 @@ mega:
       port: 993
       username: "service@gepardec.com"
       password: "${MAILER_PASSWORD:default}"
-      sender: "nobody@zep.de"
+      sender: "service@gepardec.com"
       cron-expr: "disabled"
 
   personio:
