Revert "[Gepardec/mega#718] Change default receiver email address"
This reverts commit dbe818fb84a4049c5d68ee2edae4cb3d93b23c0b.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -121,7 +121,7 @@ mega:
       port: 993
       username: "service@gepardec.com"
       password: "${MAILER_PASSWORD:default}"
-      sender: "service@gepardec.com"
+      sender: "nobody@zep.de"
       cron-expr: "disabled"
 
   personio:
